# pyimcom

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  analysis.py  cholext.py  coadd.py  compareutils.py  config.py  default_config.json  destripe_script  flex.py  fpadata.py  imDestripe.py  imsubtract.py  lakernel.py  layer.py  psfutil.py  pyproject.toml  requirements-dev.txt  requirements.txt  routine.py  run_pyimcom.py  run_pyimcom_oscrun1.py  splitpsf.py  test2.py  truthcats.py  wcsutil.py
.github/workflows/: build-documentation.yml  pre-commit-ci.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
anlsim/: Roman_WAS_obseq_11_1_23.fits  make_labnoise_symlink_osc.pl
chromatic/: PyIMCOM_star_tests.ipynb  config_prod_H.json  gal_avg_nz_sed.npy  genpsf.py  genpsf.sh  run_coad.sh  run_coadd.py  star_avg_sed.npz  was.yaml
compress/: compress_README.rst  i24.py
configs/: config_destripe-H.json  default_config.json  default_config_old.json
configs/imdestripe_configs/: config_destripe-H.json  config_destripe_HL.json
configs/paper3_configs/: F184_Chol_config.json  F184_Empir_config.json  F184_Iter_config.json  H158_Chol_config.json  H158_Empir_config.json  H158_Iter_config.json  J129_Chol_config.json  J129_Empir_config.json  J129_Iter_config.json  Y106_Chol_config.json  Y106_Empir_config.json  Y106_Iter_config.json
configs/paper4_configs/: F184_Chol_airyobsc.json  F184_Chol_airyunobsc.json  F184_Chol_amppen.json  F184_Chol_benchmark.json  F184_Chol_flatpen.json  F184_Chol_gauss_0.8x.json  F184_Chol_gauss_1.2x.json  F184_Chol_inpad=0.76.json  F184_Chol_inpad=1.00.json  F184_Chol_kappac_3x.json  F184_Chol_kappac_9x.json  F184_Chol_psfcirc.json  F184_Chol_psfnorm.json  F184_Iter_airyobsc.json  F184_Iter_airyunobsc.json  F184_Iter_amppen.json  F184_Iter_benchmark.json  F184_Iter_flatpen.json  F184_Iter_gauss_0.8x.json  F184_Iter_gauss_1.2x.json  F184_Iter_inpad=0.45.json  F184_Iter_inpad=0.75.json  F184_Iter_psfcirc.json  F184_Iter_psfnorm.json  F184_Iter_rtol=4.5e-3.json  F184_Iter_rtol=5.0e-4.json  H158_Chol_airyobsc.json  H158_Chol_airyunobsc.json  H158_Chol_amppen.json  H158_Chol_benchmark.json  H158_Chol_flatpen.json  H158_Chol_gauss_0.8x.json  H158_Chol_gauss_1.2x.json  H158_Chol_inpad=0.76.json  H158_Chol_inpad=1.00.json  H158_Chol_kappac_3x.json  H158_Chol_kappac_9x.json  H158_Chol_psfcirc.json  H158_Chol_psfnorm.json  H158_Iter_airyobsc.json  (+91 more)
configs/production_configs_spring2024/: config_prod-F.json  config_prod-H.json  config_prod-J.json  config_prod-K.json  config_prod-Y.json
diagnostics/: README.rst  correlation.py  diagnostic.pl  dynrange.py  mosaicimage.py  noise_diagnostics.py  noisespecs  noisespecs.py  report.py  run.py  starcube2.py  starcube_nonoise.py  starcube_nonoise_coldescr.txt  stars.py  truthcats.py
diagnostics/noise/: average_spectra.py  (+2 more)
docs/: compress_README.rst  conf.py  config_README.rst  diagnostics_README.rst  hierarchy.rst  index.rst  input_README.rst  meta_README.rst  output_README.rst  run_README.rst
driver/: run_pyimcom.py
examples/: illustration.ipynb  multiblock.pl  multiblock_norep.pl  multiblock_paper4.pl  read_and_shear_output_from_web.py  run_pyimcom.py  run_pyimcom_oscrun1.py
meta/: distortimage.py  ginterp.py  meta.rst
outimage_utils/: helper.py
scripts/: correlation.py  make_picture_1band.py
splitpsf/: README.rst  imsubtract.py  splitpsf.py
(+39 files in other folders)
