
[project]
name = "pyimcom"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Kaili Cao", email = "cao.1191@osu.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.urls]
"Source Code" = "https://github.com/Roman-HLIS-Cosmology-PIT/pyimcom"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pyimcom/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.ruff]
line-length = 110
target-version = "py311"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # # pep8-naming
    # "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]


[tool.coverage.run]
omit=["src/pyimcom/_version.py"]
